fix spacing

--- a/content/pages/_components/ide/index.less
+++ b/content/pages/_components/ide/index.less
@@ -138,6 +138,7 @@
     padding-top: 8px;
     padding-left: 10px;
     padding-bottom: 6px;
+    padding-right: 10px;
     position: relative;
 
     & .filename {
