--- a/content/pages/home/index.less
+++ b/content/pages/home/index.less
@@ -25,6 +25,10 @@ html, body {
   border-bottom: 2px solid @bgcolor-darker;
   & .caption {
     margin-top: 40px;
+
+    &.example {
+      margin-top: 60px;
+    }
   }
 
   overflow: hidden;
@@ -38,7 +42,7 @@ html, body {
 
   & a {
     color: @fontColor;
-    margin-right: 20px;
+    margin-left: 20px;
     border-bottom: 1px solid @fontColor;
   }
 
@@ -72,7 +76,6 @@ html, body {
 .navbar {
   padding-top:10px;
   padding-bottom:15px;
-  width: 100%;
 }
 
 .content {
